# gc-for-cpp

./: .gitignore  CMakeLists.txt  README.md
include/: gcfcpp.h
src/: main.cpp
